fix(styles): emoji should be visible on safari

--- a/projects/core/styles/mixins/mixins.less
+++ b/projects/core/styles/mixins/mixins.less
@@ -125,7 +125,7 @@
     border-width: 0;
     border-radius: inherit;
     background: none;
-    font-size: inherit;
+    font-size: initial;
     line-height: inherit;
     font-weight: inherit;
     color: inherit;
